Merged in CAP-527_clean_up_warnings_pt3 (pull request #646)
CAP-527 clean up warnings pt. 3

* CAP-527 clean up warnings pt. 3


Approved-by: Buduianu George